--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,5 +1,42 @@
-/* .shareComponent {
+/* .ç {
     display: flex;
     align-items: center;
     justify-content: center;
 } */
+
+.shareComponent {
+    width: 100%;
+    height: 170px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+}
+
+.shareContainer {
+    padding: 20px;
+}
+
+/* .topSharePart {
+    display: flex;
+    align-items: center;
+} */
+
+.shareProfilePic {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.ShareInput {
+    border: none;
+    width: 80%;
+}
+.ShareInput:focus {
+    outline: none;
+}
+
+hr {
+    margin: 20px
+ }
