--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -67,3 +67,14 @@ hr {
      font-style: 14px;
      font-weight: 500;
  }
+
+ .shareButton {
+     border: none;
+     padding: 7px;
+     border-radius: 5px;
+     background-color: green;
+     font-weight: 500;
+     margin-right: 20px;
+     cursor: pointer;
+     color: white;
+ }
