--- a/client/src/views/login/login.css
+++ b/client/src/views/login/login.css
@@ -11,6 +11,12 @@
     width: 70%;
     height: 70%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loginLeft {
+    margin-bottom: 5px;
 }
 
 .loginLeft .loginRight {
@@ -64,6 +70,10 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+/* .loginButton:disabled {
+    cursor: not-allowed;
+}  */
 
 .loginRemberPassword {
     text-align: center;
