--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -6,7 +6,7 @@
 
 .shareComponent {
     width: 100%;
-    height: 170px;
+    
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
@@ -77,4 +77,20 @@ hr {
      margin-right: 20px;
      cursor: pointer;
      color: white;
+ }
+
+ .shareImgContainer {
+     padding: 0 20px 10px 20px;
+     position: relative;
+ }
+
+ .shareImg {
+     width: 100%;
+     object-fit: cover;
+ }
+
+ .shareCancelImg {
+     position: absolute;
+     top: 0;
+     right: 20px;
  }
