--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -5,15 +5,18 @@
 } */
 
 .shareComponent {
-    width: 100%;
-    
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+  width: 100%;
+
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  position: sticky;
+  top: 52px;
+  background-color: white;
 }
 
 .shareContainer {
-    padding: 20px;
+  padding: 20px;
 }
 
 /* .topSharePart {
@@ -22,75 +25,75 @@
 } */
 
 .shareProfilePic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
 }
 
 .ShareInput {
-    border: none;
-    width: 80%;
+  border: none;
+  width: 80%;
 }
 .ShareInput:focus {
-    outline: none;
+  outline: none;
 }
 
 hr {
-    margin: 20px
- }
+  margin: 20px;
+}
 
- .bottomSharePart {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
- }
+.bottomSharePart {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
- .shareOptions {
-     display: flex;
- }
+.shareOptions {
+  display: flex;
+}
 
- .shareOption {
-     display: flex;
-     align-items: center;
-     margin-right: 15px;
-     cursor: pointer;
- }
+.shareOption {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  cursor: pointer;
+}
 
- .shareIcon {
-     font-style: 18px;
-     margin-right: 3px;
- }
+.shareIcon {
+  font-style: 18px;
+  margin-right: 3px;
+}
 
- .shareOptionText {
-     font-style: 14px;
-     font-weight: 500;
- }
+.shareOptionText {
+  font-style: 14px;
+  font-weight: 500;
+}
 
- .shareButton {
-     border: none;
-     padding: 7px;
-     border-radius: 5px;
-     background-color: green;
-     font-weight: 500;
-     margin-right: 20px;
-     cursor: pointer;
-     color: white;
- }
+.shareButton {
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
+}
 
- .shareImgContainer {
-     padding: 0 20px 10px 20px;
-     position: relative;
- }
+.shareImgContainer {
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
 
- .shareImg {
-     width: 100%;
-     object-fit: cover;
- }
+.shareImg {
+  width: 100%;
+  object-fit: cover;
+}
 
- .shareCancelImg {
-     position: absolute;
-     top: 0;
-     right: 20px;
- }
+.shareCancelImg {
+  position: absolute;
+  top: 0;
+  right: 20px;
+}
