--- a/client/src/components/profilePage/profileInfo.css
+++ b/client/src/components/profilePage/profileInfo.css
@@ -5,24 +5,34 @@
 } */
 
 .profileInfo {
-    margin-bottom: 30px;
-
+  margin-bottom: 30px;
 }
 
 .profileInfoItem {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .profileInfoField {
-    font-weight: 500;
-    margin-right: 15px;
-    color: #555;
+  font-weight: 500;
+  margin-right: 15px;
+  color: #555;
 }
 
 .profileInfoValue {
-    font-weight: 300;
+  font-weight: 300;
 }
-
+.profileInput {
+  height: 20px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  font-size: 13px;
+  padding-left: 20px;
+  appearance: none;
+}
+.profileInput:focus {
+  outline: none;
+  text-decoration: none;
+}
 /* .profileFollowings {
     display: flex;
     flex-wrap: wrap;
