--- a/client/src/views/profilePage/profilePage.css
+++ b/client/src/views/profilePage/profilePage.css
@@ -1,46 +1,84 @@
-.profile  {
-    display: flex;
-    
+.profile {
+  display: flex;
 }
 
 .profileRigt {
-    flex: 1;
+  flex: 1;
 }
 .profileCover {
-    height: 200px;
-    position: relative;
+  height: 200px;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 .profileCoverImg {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 .profileUserImg {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 40px;
-    border: 3px solid white;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 40px;
+  border: 3px solid white;
+}
+.profileIconsContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 55px;
+}
+
+.profileButtons {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+/* .shareOprofileOptionption { 
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  cursor: pointer;
+} */
+
+.profileIcon {
+  font-style: 18px;
+  margin-right: 3px;
+}
+
+.profileSendButton {
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
 }
 .profileInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .profileInfoName {
-    font-style: 24px;
+  font-style: 24px;
 }
 .profileInfoDesc {
-    font-weight: 200;
+  font-weight: 200;
 }
 .profileRightBottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
